// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`removeUnused does not remove if run twice 1`] = `
"// import a js file to force an error message that includes an absolute path to be made relative
import foo from './test-javascript-input';

// Testing removing unused

const error1: string = 0;

// Line above suppression

export const foo = () => {
  console.log(
    // Other comment
    \\"foo\\",
    
    \\"bar\\",
    \\"baz\\"
  );

  const error2: string = 0;

  
  return \\"bar\\";
};

const error1: string = 0;

// Testing suppression inside tagged template literal (a la styled components)
type Bar = { baz: {} }
type StringProducer = (arg0: Bar) => string;

export function foo2(_strings: TemplateStringsArray, ...stringProducers: Array<StringProducer>) {
  return '';
}

const bar = foo2\`
  hello
  \${({baz}: Bar) => baz.bun}
  world
  \${({baz}: Bar) => baz.bun}
  again
  \${({baz}: Bar) => baz.bun}
  and
  \${({baz}: Bar) => baz.bun}
  again
\`

// Testing single line template literal
const baz = foo2\`\${({baz}: Bar) => baz.bun}\`
"
`;

exports[`removeUnused removes unused error suppressions 1`] = `
"// import a js file to force an error message that includes an absolute path to be made relative
import foo from './test-javascript-input';

// Testing removing unused

const error1: string = 0;

// Line above suppression

export const foo = () => {
  console.log(
    // Other comment
    \\"foo\\",
    
    \\"bar\\",
    \\"baz\\"
  );

  const error2: string = 0;

  
  return \\"bar\\";
};

const error1: string = 0;

// Testing suppression inside tagged template literal (a la styled components)
type Bar = { baz: {} }
type StringProducer = (arg0: Bar) => string;

export function foo2(_strings: TemplateStringsArray, ...stringProducers: Array<StringProducer>) {
  return '';
}

const bar = foo2\`
  hello
  \${({baz}: Bar) => baz.bun}
  world
  \${({baz}: Bar) => baz.bun}
  again
  \${({baz}: Bar) => baz.bun}
  and
  \${({baz}: Bar) => baz.bun}
  again
\`

// Testing single line template literal
const baz = foo2\`\${({baz}: Bar) => baz.bun}\`
"
`;

exports[`removeUnused works with autoSuppress 1`] = `
"// import a js file to force an error message that includes an absolute path to be made relative
// @ts-expect-error - TS7016 - Could not find a declaration file for module './test-javascript-input'. 'src/fix/suppressions/__test__/test-javascript-input.js' implicitly has an 'any' type.
import foo from './test-javascript-input';

// Testing removing unused

// @ts-expect-error - TS2322 - Type 'number' is not assignable to type 'string'. | TS2451 - Cannot redeclare block-scoped variable 'error1'.
const error1: string = 0;

// Line above suppression

export const foo = () => {
  console.log(
    // Other comment
    \\"foo\\",
    
    \\"bar\\",
    \\"baz\\"
  );

// @ts-expect-error - TS2322 - Type 'number' is not assignable to type 'string'.
  const error2: string = 0;

  
  return \\"bar\\";
};

// @ts-expect-error - TS2322 - Type 'number' is not assignable to type 'string'. | TS2451 - Cannot redeclare block-scoped variable 'error1'.
const error1: string = 0;

// Testing suppression inside tagged template literal (a la styled components)
type Bar = { baz: {} }
type StringProducer = (arg0: Bar) => string;

export function foo2(_strings: TemplateStringsArray, ...stringProducers: Array<StringProducer>) {
  return '';
}

const bar = foo2\`
  hello
\${/* @ts-expect-error */ \\"\\"}
  \${({baz}: Bar) => baz.bun}
  world
\${/* @ts-expect-error */ \\"\\"}
  \${({baz}: Bar) => baz.bun}
  again
\${/* @ts-expect-error */ \\"\\"}
  \${({baz}: Bar) => baz.bun}
  and
\${/* @ts-expect-error */ \\"\\"}
  \${({baz}: Bar) => baz.bun}
  again
\`

// Testing single line template literal
// @ts-expect-error - TS2339 - Property 'bun' does not exist on type '{}'.
const baz = foo2\`\${({baz}: Bar) => baz.bun}\`
"
`;
